# private-perps

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  devnet-market2.json  devnet-usdc-mint.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
app/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: TradingApp.tsx
app/src/components/layout/: Navbar.tsx  WalletProvider.tsx
app/src/components/trading/: MarketSelector.tsx  OrderBook.tsx  PositionsTable.tsx  PriceChart.tsx  StatsBar.tsx  TradingPanel.tsx
app/src/hooks/: index.ts  useMarketStats.ts  usePositions.ts  usePriceHistory.ts  usePrivatePositions.ts  useTrade.ts
app/src/lib/: encrypt.ts  idl.json
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/private-perps/: Cargo.toml
programs/private-perps/src/: ctx.rs  errors.rs  lib.rs
programs/private-perps/src/instructions/: apply_funding.rs  cancel_order.rs  deposit_collateral.rs  execute_liquidation.rs  initialize_market.rs  mod.rs  place_order.rs  update_market.rs  update_oracle.rs  withdraw_collateral.rs
programs/private-perps/src/state/: market.rs  mod.rs  oracle.rs  order.rs  position.rs  registry.rs  vault.rs
scripts/: deposit.ts  deposit2.ts  init_market2.ts  initialize_market.ts  mint_usdc.ts  place_order.ts
sdk/: package.json  tsconfig.json
sdk/src/: arcium.ts  client.ts  encrypt.ts  index.ts  types.ts
tests/: private_perps.test.ts
(+4 files in other folders)
