[workspace]
members = [
    "programs/private-perps",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"

[profile.release]
overflow-checks = true
