[workspace]
members = ["programs/private-perps", "encrypted-ixs"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token", "associated_token"] }
bytemuck    = { version = "1.14", features = ["derive"] }
thiserror   = "1.0"
solana-program = "=2.1.0"

[profile.release]
overflow-checks = true
